more stuff IDs for (almost) everyone Highlight switches on label hover Add some missing 'title's Adjust the collapse expand button Re design layout.js which fixed a lot of subtle style issues finish up input.js update display.js with the new object option method call Fix breaking issue when removing items from arrays and whatever else i forgot

--- a/styles/main.css
+++ b/styles/main.css
@@ -165,11 +165,21 @@ input[type=number] {
     }
 }
 
+
 .form-check-input:not(:checked) {
     background-color: #333E52 !important;
     border: 1px solid #aaa;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='white'/%3e%3c/svg%3e")
 }
+
+    .form-check-input:not(:checked):hover {
+        background-color: #662480 !important;
+    }
+
+.form-check-input:not(:disabled) {
+    cursor: pointer !important;
+}
+
 
 .accordion-body {
     padding: 1rem 0.5rem;
@@ -199,10 +209,6 @@ input[type=number] {
 
 .storage-item {
     width: 50%;
-}
-
-.form-check-input:not(:disabled) {
-    cursor: pointer !important;
 }
 
 .p-sm {
